src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Acct_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_BMS_Code__c</fullName>
        <label>Contact BMS Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <label>Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inactive_Contact_Email__c</fullName>
        <label>Inactive Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inactive_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Captain</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contracting/Purchasing</fullName>
                </value>
                <value>
                    <fullName>Crew</fullName>
                </value>
                <value>
                    <fullName>Crewing Manager</fullName>
                </value>
                <value>
                    <fullName>Engineering/Technical</fullName>
                </value>
                <value>
                    <fullName>Finance/Accounting</fullName>
                </value>
                <value>
                    <fullName>Fleet Manager</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Group ICT Manager</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT Manager</fullName>
                </value>
                <value>
                    <fullName>IT Staff</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Main Contact</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Owner/Operator</fullName>
                </value>
                <value>
                    <fullName>Parts Manager</fullName>
                </value>
                <value>
                    <fullName>President/CEO</fullName>
                </value>
                <value>
                    <fullName>Program/Platform Management</fullName>
                </value>
                <value>
                    <fullName>Program Management</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Purchasing Manager</fullName>
                </value>
                <value>
                    <fullName>Purchasing Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KV_Company_Ref_No__c</fullName>
        <formula>Account.KV_Company_Ref_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KV Company Ref No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sector__c</fullName>
        <label>Market Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Agent_s__c</fullName>
        <formula>Account.KV_SalesAgentText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agent(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KV UK</fullName>
                </value>
                <value>
                    <fullName>KV ASIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>